# 2sem_AlgoLab_2

./: .gitignore  .gitmodules  README.md  run.cmd
A/: A.cpp  CMakeLists.txt  README.md
B/: B.cpp  CMakeLists.txt  README.md
C/: AVL.h  AVL.hpp  AlmostTree.cpp  AlmostTree.h  C.cpp  CMakeLists.txt  C_Test.cpp  C_Test.h  C_Test.hpp  README.md  TestTree.cpp  TestTree.h
D/: CMakeLists.txt  D.cpp  README.md
D/test_system/: D_Test.cpp
F/: AVL.hpp  AlmostTree.cpp  AlmostTree.hpp  CMakeLists.txt  F.cpp  F_Test.cpp  F_Test.hpp  README.md
F/test_system/: AVL.hpp  AlmostTree.cpp  AlmostTree.hpp  F_Test.cpp  F_Test.hpp
test/: CMakeLists.txt  test.cpp
